--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HIDDEN KEYS BEFORE SEND THE PROJE\n",
+    "# HIDE KEYS BEFORE SEND THE PROJECT\n",
     "consumer_key = 'p6xYPlE4O8s5S1xHUWnoWGcdH'\n",
     "consumer_secret = 'C6Zs8mVVE5eab27zIR01gdyM05oA6iL35PD91vyNcB9pk4QBjY'\n",
     "access_token = '3142373003-iEAqVxAGyeoeoxeweK3oVf7hJYGsu1F696bcoxI'\n",
